# stdpipe

./: .buildinfo  .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  REALBOGUS.md  TESTING.md  conda_install.sh  contributing.html  docker-compose.yaml  genindex.html  index.html  install_hotpants.sh  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_test.txt  search.html  searchindex.js  setup.py
.github/workflows/: GitlabSync.yml  deploy-github-pages.yml  test_docker_build.yaml
_sources/: contributing.md.txt
_sources/api/: stdpipe.astrometry.rst.txt  stdpipe.catalogs.rst.txt  stdpipe.cutouts.rst.txt  stdpipe.db.rst.txt  stdpipe.lcs.rst.txt  stdpipe.photometry.rst.txt  stdpipe.pipeline.rst.txt  stdpipe.plots.rst.txt  stdpipe.psf.rst.txt  stdpipe.rst.txt  stdpipe.subtraction.rst.txt  stdpipe.templates.rst.txt  stdpipe.utils.rst.txt
api/: stdpipe.cutouts.html  stdpipe.html  stdpipe.pipeline.html  stdpipe.plots.html  stdpipe.subtraction.html  stdpipe.utils.html
doc/: Makefile  astrometry.rst  authors.md  catalogs.rst  conf.py  contributing.md  cutouts.rst  detection.rst  flags.rst  index.rst  installation.md  installation.rst  lcs.rst  photometry.rst  preprocessing.rst  psf.rst  realbogus.rst  requirements_rtd.txt  simulation.rst  subtraction.rst  todo.rst  transients.rst  usage.rst  utils.rst
examples/: README_REALBOGUS.md  compare_psf_photometry.py  compare_subtraction.py  compare_wcs_projections.py  realbogus_example.py  simulation_examples.py  test_flux_conservation.py  train_realbogus.py
notebooks/: image_stacking.ipynb  simple_lowlevel_pipeline.ipynb  simple_pipeline.ipynb  simulated_stars.ipynb  stdpipe_tutorial.ipynb
stdpipe/: __init__.py  artefacts.py  astrometry.py  astrometry_quad.py  astrometry_wcs.py  catalogs.py  cutouts.py  db.py  lcs.py  photometry.py  photometry_background.py  photometry_iraf.py  photometry_measure.py  photometry_model.py  photometry_psf.py  pipeline.py  plots.py  psf.py  realbogus.py  realbogus_features.py  reproject.py  resolve.py  sfft.py  simulation.py  smoothing.py  subtraction.py  templates.py  utils.py
stdpipe/data/: legacysurvey.py
tests/: README.md  conftest.py  test_artefacts.py  test_astrometry.py  test_astrometry_quad.py  test_astrometry_wcs.py  test_background_estimation.py  test_background_gradients.py  test_background_nongrid.py  test_background_polynomial.py  test_catalogs.py  test_lcs.py  test_moffat_photometry_limits.py  test_photometry.py  test_photometry_biases.py  test_photometry_iraf.py  test_photometry_measure.py  test_photometry_model.py  test_photometry_psf.py  test_pipeline.py  test_plots.py  test_psf.py  test_realbogus.py  test_realbogus_features.py  test_reproject.py  test_resolve.py  test_sep_psf_bias.py  test_sfft.py  test_simulation.py  test_smoothing.py  test_templates.py  test_utils.py
